# tap-npm

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  constraints.txt  test.yaml  test.yml
tap_npm/: __main__.py  _app.py  client.py  tap.py
tap_npm/schemas/: __init__.py  packages.json
tests/: __init__.py  test_core.py
