[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-npm"
version = "0.0.1"
description = "Singer tap for NPM, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Meltano",
  "node",
  "npm",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests~=2.32.0",
  "singer-sdk~=0.51.0",
]
urls.documentation = "https://github.com/reservoir-data/tap-npm#readme"
urls.homepage = "https://github.com/reservoir-data/tap-npm"
urls.repository = "https://github.com/reservoir-data/tap-npm"
scripts.tap-npm = "tap_npm.tap:app"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.23",
  "pytest>=8",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.17",
  "ty>=0.0.1a20",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.5.19"

[tool.ruff]
line-length = 120

lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
lint.per-file-ignores."noxfile.py" = [ "ANN" ]
lint.per-file-ignores."tests/*" = [ "ANN", "S101" ]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [ "tap_npm" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "types_requests"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.tox]
min_version = "4.22"
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_NPM_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_npm", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_npm", "tests" ], extend = true } ],
]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [ "dateutil.*" ]
