[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-npm"
version = "0.0.1"
description = "Singer tap for NPM, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Meltano",
  "node",
  "npm",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests~=2.33.0",
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-npm = "tap_npm.tap:app"
[project.urls]
documentation = "https://github.com/reservoir-data/tap-npm#readme"
homepage = "https://github.com/reservoir-data/tap-npm"
repository = "https://github.com/reservoir-data/tap-npm"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.23",
  "pytest>=9.0.3",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19",
  "ty>=0.0.21",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [ "ANN" ]
per-file-ignores."tests/*" = [ "ANN", "S101" ]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [ "tap_npm" ]
isort.required-imports = [ "from __future__ import annotations" ]
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
types-requests = "types_requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-v",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:No records were available to test:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.22"
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 13 },
  ] },
]
[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_npm", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_npm", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_NPM_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
